# Lightrag_core

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  config.example.yaml  docker-compose.yml  iniDesgin.ini  pyproject.toml  requirements.txt
docs/: api-design.md  architecture.md  data-model.md  docker-deployment.md  roadmap.md
lightrag_core/: __init__.py
lightrag_core/api/: main.py  schemas.py
lightrag_core/config/: settings.py
lightrag_core/core/: __init__.py
lightrag_core/core/chunker/: __init__.py  fixed_chunker.py
lightrag_core/core/embedding/: __init__.py  bge_embedding.py
lightrag_core/core/llm/: __init__.py  deepseek_provider.py  ollama_provider.py
lightrag_core/core/reranker/: __init__.py  score_reranker.py
lightrag_core/core/retriever/: __init__.py  bm25_retriever.py  hybrid_retriever.py  vector_retriever.py
lightrag_core/ingestion/parser/: __init__.py  csv_parser.py  doc_parser.py  docx_parser.py  html_parser.py  json_parser.py  pdf_parser.py  text_parser.py  xlsx_parser.py
lightrag_core/storage/metadata/: sqlite_store.py
lightrag_core/storage/vectorstore/: faiss_store.py
lightrag_core/ui/: gradio_app.py
tests/: conftest.py
tests/test_api/: test_file_upload.py  test_llm.py  test_main.py  test_pipeline.py
tests/test_config/: test_settings.py
tests/test_core/: test_bm25.py  test_chunker.py  test_deepseek.py  test_embedding.py  test_hybrid.py  test_reranker.py  test_retriever.py
tests/test_ingestion/: test_new_parsers.py  test_parser.py  test_pdf_parser.py
tests/test_storage/: test_faiss_store.py  test_sqlite_store.py
